--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,7 @@
         "locales":{
           "en": "src/locale/messages.xlf",
           "fr": "src/locale/messages.fr.xlf",
-          "de": "src/locale/messages.es.xlf",
+          "de": "src/locale/messages.de.xlf"
         }
       },
       "schematics": {
